--- a/style.css
+++ b/style.css
@@ -7,10 +7,14 @@
 	height: 95vh !important;
 }
 
-h5 {
+h4 {
 	font-weight: 600;
 }
 
 .light {
 	font-weight: 600;
+}
+
+.parallax-container {
+	height: 40vh !important;
 }
